--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,11 @@ yarn-error.log*
 
 # local env files
 .env*.local
-
 # vercel
 .vercel
-
+.env*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+*.db
+
