--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,10 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+
 # vercel
 .vercel
-.env*
+.env
 # typescript
 *.tsbuildinfo
 next-env.d.ts
